# resource-manager

./: .clang-format  .cmake-format  CMakeLists.txt  Dockerfile  README.md
cmake/: Option.cmake  Warnings.cmake
include/: error.hpp  resource_manager.hpp
src/: CMakeLists.txt  allocator.cpp  allocator.hpp  error.cpp  resource_manager.cpp  user.cpp  user.hpp
tests/: CMakeLists.txt
tests/unit-tests/: CMakeLists.txt  allocator_unit_test.cpp  main.cpp  resource_manager_unit_test.cpp  resource_user_unit_test.cpp
